--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="([А-ЯЁ][а-яё]+)(?:(?:-)([А-ЯЁ][а-яё]+))?" placeholder="Имя" required/>
+                        <input class="form__input" type="text" name="name" pattern="([А-ЯЁ][а-яё]+)(?:(?:-)([А-ЯЁ][а-яё]+))?" placeholder="Имя" minlength="20" maxlength="20" required/>
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="([a-zA-Z0-9]([-_.]?[a-zA-Z0-9]+)*)@([a-zA-Z0-9]([-]?[a-zA-Z0-9]+)*)(\.([a-zA-Z])+)+" placeholder="E-Mail" required/>
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="(https?:\/{2}){1}((?:(www\.)?[a-zA-Z0-9]+[^@\.])+\.([a-z]+)|(?:\d{1,4}\.?){4}(:\d{2,5})?)(([\/:\?])?([a-zA-Z0-9]+[^@\.#\/]))*([\/#\?]){0,2}" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="(https?:\/{2})?(www\.)?((?!(?:www\.))([a-zA-Z](?:[-]?[a-zA-Z0-9]+)*\.[a-zA-Z]+){1,}|(\d{1,3}(\.\d{1,3}){3}))((:)(!?\d{2,5}))?(([\/:\?])?([a-zA-Z0-9]+[^@\.#\/]))*([\/#\?]){0,2}" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
